# SkillboxSearchEngine

./: CMakeLists.txt  README.md
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
json_file/: answers.json  config.json  requests.json
resource_file/: third_file.txt
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchEngine.cpp  SearchServer.cpp
tests/: CMakeLists.txt  test_first.cpp  test_second.cpp
